syntax = "proto3";

package pb;

service Tx {
    rpc Register (TxReq) returns (TxRsp) {
    }

    rpc Commit (TxReq) returns (TxRsp) {
    }

    rpc Rollback (TxReq) returns (TxRsp) {
    }

    rpc Cancel (TxReq) returns (TxRsp) {
    }

    rpc Confirm (TxReq) returns (TxRsp) {
    }

    rpc Timeout (TxReq) returns (TxRsp) {
    }
}

message TxReq {
    string ToId = 1; // 目标事务id
    string FromId = 2; // 请求来源事务的 id
    string FromServerUUID = 3; // 请求来源事务的 server uuid
    string FromServerName = 4; // 请求来源事务的 server name
    string FromServerAddr = 5; // 请求来源事务的 server addr
}

message TxRsp {
}